TEST_PROGRAMS/INVALID/justin_domignue/invalid-1.min
# No comparison operators
var x: int;
x = 10;
while x < 0 do  # error
  x = x - 1;
done

